--- a/studentwork/plot_fred_26102020.ipynb
+++ b/studentwork/plot_fred_26102020.ipynb
@@ -771,8 +771,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#sub hypothesis seems to be false as we can see that cars with less cylinders use l"
+    "#sub hypothesis seems to be false as we can see that cars with less cylinders use less MPG"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
