--- a/studentwork/plot_fred_26102020.ipynb
+++ b/studentwork/plot_fred_26102020.ipynb
@@ -840,6 +840,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['Cylinders'] = data['Cylinders'].astype('category', copy=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 32 entries, 0 to 31\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column           Non-Null Count  Dtype   \n",
+      "---  ------           --------------  -----   \n",
+      " 0   Model            32 non-null     object  \n",
+      " 1   MPG              32 non-null     float64 \n",
+      " 2   Cylinders        32 non-null     category\n",
+      " 3   Displacement     32 non-null     float64 \n",
+      " 4   Horsepower       32 non-null     int64   \n",
+      " 5   Rear_Axle_Ratio  32 non-null     float64 \n",
+      " 6   Weight (000)     32 non-null     float64 \n",
+      " 7   Qtr_Mile_Time    32 non-null     float64 \n",
+      " 8   Engine_Shape     32 non-null     int64   \n",
+      " 9   Transmission     32 non-null     int64   \n",
+      " 10  Fwd_Gears        32 non-null     int64   \n",
+      " 11  Carburators      32 non-null     int64   \n",
+      "dtypes: category(1), float64(5), int64(5), object(1)\n",
+      "memory usage: 3.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
