--- a/studentwork/plt_rayan_201026.ipynb
+++ b/studentwork/plt_rayan_201026.ipynb
@@ -273,11 +273,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpg                10.400\n",
+       "cylinders           4.000\n",
+       "displacement       71.100\n",
+       "horsepower         52.000\n",
+       "rear_axle_ratio     2.760\n",
+       "weight_(000)        1.513\n",
+       "qtr_mile_time      14.500\n",
+       "engine_shape        0.000\n",
+       "transmission        0.000\n",
+       "fwd_gears           3.000\n",
+       "carburators         1.000\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# mpg seems to be negatively correlater to horpower\n",
+    "file1.min(axis=None, skipna=None, level=None, numeric_only=None)  #None/True/False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "file1['cylinders'].min()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# mpg seems to be negatively correlater to horpower"
+    "data['cylinders']=data['cylinders'].astype('category',copy=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "mpg                 float64\n",
+       "cylinders          category\n",
+       "displacement        float64\n",
+       "horsepower            int64\n",
+       "rear_axle_ratio     float64\n",
+       "weight_(000)        float64\n",
+       "qtr_mile_time       float64\n",
+       "engine_shape          int64\n",
+       "transmission          int64\n",
+       "fwd_gears             int64\n",
+       "carburators           int64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
    ]
   },
   {
