updated to correct typo

--- a/Other/WebscrapingAPIS/031220_Using_API_spotipy.ipynb
+++ b/Other/WebscrapingAPIS/031220_Using_API_spotipy.ipynb
@@ -37,8 +37,8 @@
    "source": [
     "#Initialize SpotiPy with user credentias\n",
     "sp = spotipy.Spotify(auth_manager=SpotifyClientCredentials(\n",
-    "    client_id=\"<introduce your client id>\",\n",
-    "    client_secret=\"<introduce your client secret>\"))"
+    "    client_id=\"your id\",\n",
+    "    client_secret=\"your secret\"))"
    ]
   },
   {
@@ -135,6 +135,15 @@
    "source": [
     "#we did run a limit of 50 in our query - but can easily go to next 50\n",
     "results[\"tracks\"][\"next\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results"
    ]
   },
   {
@@ -276,7 +285,7 @@
    "outputs": [],
    "source": [
     "#get all albums for your favourite artist\n",
-    "#- using spotify web browser to find url of chosen artist \n",
+    "#- using spotify web browser to find uri of chosen artist \n",
     "\n",
     "artist = sp.artist(\"https://open.spotify.com/artist/1dfeR4HaWDbWqFHLkxsg1d\")\n",
     "\n",
@@ -343,6 +352,7 @@
    "source": [
     "#here we are returning to using the results set from our earlier query \n",
     "#but you could also build upon any other results from the API\n",
+    "#go back and rerun results query\n",
     "my_track = results[\"tracks\"][\"items\"][5]"
    ]
   },
@@ -405,7 +415,7 @@
     "\n",
     "#read a playlist \n",
     "\n",
-    "playlist_id = 'spotify:user:spotifycharts:playlist:31ymdYCITDnZRtkKzP3Itp'\n",
+    "playlist_id = 'spotify:user:spotifycharts:playlist:1fqkbjEACMlekdddm5aobE'\n",
     "results = sp.playlist(playlist_id)\n",
     "print(json.dumps(results, indent=4))"
    ]
@@ -419,7 +429,7 @@
     "\n",
     "#capture features of your own playlists into a df - enter your id and playlist id\n",
     "\n",
-    "playlist = sp.user_playlist(\"yourid\", \"playlistid\") \n",
+    "playlist = sp.user_playlist(\"sianedav\", \"6FZdQdB8c32SG0yuvIMs1n\") \n",
     "songs = playlist[\"tracks\"][\"items\"] \n",
     "ids = [] \n",
     "for i in range(len(songs)): \n",
@@ -493,7 +503,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tracks = get_playlist_tracks(\"31ymdYCITDnZRtkKzP3Itp\")"
+    "tracks = get_playlist_tracks(\"31ymdYCITDnZRtkKzP3Itp\")\n",
+    "tracks"
    ]
   },
   {
@@ -623,7 +634,7 @@
    "outputs": [],
    "source": [
     "#1 \n",
-    "WAP = sp.search(q='WAP', limit=1)"
+    "usersearch = sp.search(q='bohemian', limit=1)"
    ]
   },
   {
