--- a/projects/Gnodproject/041220 clustering K on data about wine.ipynb
+++ b/projects/Gnodproject/041220 clustering K on data about wine.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +288,7 @@
        "      <td>1.04</td>\n",
        "      <td>3.92</td>\n",
        "      <td>1065.0</td>\n",
-       "      <td>7</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -305,7 +305,7 @@
        "      <td>1.05</td>\n",
        "      <td>3.40</td>\n",
        "      <td>1050.0</td>\n",
-       "      <td>7</td>\n",
+       "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -322,7 +322,7 @@
        "      <td>1.03</td>\n",
        "      <td>3.17</td>\n",
        "      <td>1185.0</td>\n",
-       "      <td>7</td>\n",
+       "      <td>12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -339,7 +339,7 @@
        "      <td>0.86</td>\n",
        "      <td>3.45</td>\n",
        "      <td>1480.0</td>\n",
-       "      <td>7</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -356,36 +356,159 @@
        "      <td>1.04</td>\n",
        "      <td>2.93</td>\n",
        "      <td>735.0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>173</th>\n",
+       "      <td>13.71</td>\n",
+       "      <td>5.65</td>\n",
+       "      <td>2.45</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>1.68</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>1.06</td>\n",
+       "      <td>7.70</td>\n",
+       "      <td>0.64</td>\n",
+       "      <td>1.74</td>\n",
+       "      <td>740.0</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>174</th>\n",
+       "      <td>13.40</td>\n",
+       "      <td>3.91</td>\n",
+       "      <td>2.48</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>1.80</td>\n",
+       "      <td>0.75</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>1.41</td>\n",
+       "      <td>7.30</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>750.0</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>175</th>\n",
+       "      <td>13.27</td>\n",
+       "      <td>4.28</td>\n",
+       "      <td>2.26</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>1.59</td>\n",
+       "      <td>0.69</td>\n",
+       "      <td>0.43</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>10.20</td>\n",
+       "      <td>0.59</td>\n",
+       "      <td>1.56</td>\n",
+       "      <td>835.0</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>13.17</td>\n",
+       "      <td>2.59</td>\n",
+       "      <td>2.37</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>120.0</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>1.46</td>\n",
+       "      <td>9.30</td>\n",
+       "      <td>0.60</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>840.0</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>177</th>\n",
+       "      <td>14.13</td>\n",
+       "      <td>4.10</td>\n",
+       "      <td>2.74</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>2.05</td>\n",
+       "      <td>0.76</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>1.35</td>\n",
+       "      <td>9.20</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>1.60</td>\n",
+       "      <td>560.0</td>\n",
+       "      <td>15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>178 rows × 14 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   alcohol  malic_acid   ash  alcalinity_of_ash  magnesium  total_phenols  \\\n",
-       "0    14.23        1.71  2.43               15.6      127.0           2.80   \n",
-       "1    13.20        1.78  2.14               11.2      100.0           2.65   \n",
-       "2    13.16        2.36  2.67               18.6      101.0           2.80   \n",
-       "3    14.37        1.95  2.50               16.8      113.0           3.85   \n",
-       "4    13.24        2.59  2.87               21.0      118.0           2.80   \n",
+       "     alcohol  malic_acid   ash  alcalinity_of_ash  magnesium  total_phenols  \\\n",
+       "0      14.23        1.71  2.43               15.6      127.0           2.80   \n",
+       "1      13.20        1.78  2.14               11.2      100.0           2.65   \n",
+       "2      13.16        2.36  2.67               18.6      101.0           2.80   \n",
+       "3      14.37        1.95  2.50               16.8      113.0           3.85   \n",
+       "4      13.24        2.59  2.87               21.0      118.0           2.80   \n",
+       "..       ...         ...   ...                ...        ...            ...   \n",
+       "173    13.71        5.65  2.45               20.5       95.0           1.68   \n",
+       "174    13.40        3.91  2.48               23.0      102.0           1.80   \n",
+       "175    13.27        4.28  2.26               20.0      120.0           1.59   \n",
+       "176    13.17        2.59  2.37               20.0      120.0           1.65   \n",
+       "177    14.13        4.10  2.74               24.5       96.0           2.05   \n",
        "\n",
-       "   flavanoids  nonflavanoid_phenols  proanthocyanins  color_intensity   hue  \\\n",
-       "0        3.06                  0.28             2.29             5.64  1.04   \n",
-       "1        2.76                  0.26             1.28             4.38  1.05   \n",
-       "2        3.24                  0.30             2.81             5.68  1.03   \n",
-       "3        3.49                  0.24             2.18             7.80  0.86   \n",
-       "4        2.69                  0.39             1.82             4.32  1.04   \n",
+       "     flavanoids  nonflavanoid_phenols  proanthocyanins  color_intensity   hue  \\\n",
+       "0          3.06                  0.28             2.29             5.64  1.04   \n",
+       "1          2.76                  0.26             1.28             4.38  1.05   \n",
+       "2          3.24                  0.30             2.81             5.68  1.03   \n",
+       "3          3.49                  0.24             2.18             7.80  0.86   \n",
+       "4          2.69                  0.39             1.82             4.32  1.04   \n",
+       "..          ...                   ...              ...              ...   ...   \n",
+       "173        0.61                  0.52             1.06             7.70  0.64   \n",
+       "174        0.75                  0.43             1.41             7.30  0.70   \n",
+       "175        0.69                  0.43             1.35            10.20  0.59   \n",
+       "176        0.68                  0.53             1.46             9.30  0.60   \n",
+       "177        0.76                  0.56             1.35             9.20  0.61   \n",
        "\n",
-       "   od280/od315_of_diluted_wines  proline  cluster  \n",
-       "0                          3.92   1065.0        7  \n",
-       "1                          3.40   1050.0        7  \n",
-       "2                          3.17   1185.0        7  \n",
-       "3                          3.45   1480.0        7  \n",
-       "4                          2.93    735.0        0  "
+       "     od280/od315_of_diluted_wines  proline  cluster  \n",
+       "0                            3.92   1065.0        3  \n",
+       "1                            3.40   1050.0       11  \n",
+       "2                            3.17   1185.0       12  \n",
+       "3                            3.45   1480.0        3  \n",
+       "4                            2.93    735.0       13  \n",
+       "..                            ...      ...      ...  \n",
+       "173                          1.74    740.0       15  \n",
+       "174                          1.56    750.0       15  \n",
+       "175                          1.56    835.0        4  \n",
+       "176                          1.62    840.0        6  \n",
+       "177                          1.60    560.0       15  \n",
+       "\n",
+       "[178 rows x 14 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,13 +517,50 @@
     "# Predicting / assigning the clusters:\n",
     "clusters = kmeans.predict(X_prep)\n",
     "\n",
-    "# Check the size of the clusters\n",
-    "pd.Series(clusters).value_counts().sort_index()\n",
-    "\n",
     "# Explore the cluster assignment in the original dataset\n",
     "X_df = pd.DataFrame(X)\n",
     "X_df[\"cluster\"] = clusters\n",
-    "X_df.head()"
+    "X_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     11\n",
+       "1     10\n",
+       "2      5\n",
+       "3     17\n",
+       "4      9\n",
+       "5     21\n",
+       "6     12\n",
+       "7      9\n",
+       "8     12\n",
+       "9     11\n",
+       "10     4\n",
+       "11    14\n",
+       "12    15\n",
+       "13     4\n",
+       "14     2\n",
+       "15     9\n",
+       "16     3\n",
+       "17     7\n",
+       "18     3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Check the size of the clusters\n",
+    "pd.Series(clusters).value_counts().sort_index()"
    ]
   },
   {
